env/ingress-nginx/nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-nodeport
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30080
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    nodePort: 30443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
