env/ingress-nginx/s3gw-ingress-no-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3gw-no-tls-ingress
  namespace: s3gw-system
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: s3gw-no-tls.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s3gw-service
            port:
              number: 80
