env/ingress-nginx/s3gw-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3gw-ui-ingress
  namespace: s3gw-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - s3gw-ui.local
    secretName: s3gw-ingress-secret
  rules:
  - host: s3gw-ui.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s3gw-ui-service
            port:
              number: 80
